--- a/nand_spl/board/samsung/ok6410/Makefile
+++ b/nand_spl/board/samsung/ok6410/Makefile
@@ -35,7 +35,7 @@ AFLAGS	+= -DCONFIG_NAND_SPL
 CFLAGS	+= -DCONFIG_NAND_SPL
 
 SOBJS	= start.o cpu_init.o lowlevel_init.o
-COBJS	= nand_boot.o nand_ecc.o s3c64xx.o nand_cp.o
+COBJS	= nand_boot.o nand_ecc.o s3c64xx.o nand_cp.o test.o mynand.o
 
 SRCS	:= $(addprefix $(obj),$(SOBJS:.o=.S) $(COBJS:.o=.c))
 OBJS	:= $(addprefix $(obj),$(SOBJS) $(COBJS))
